# tiquetes

./: Cargo.toml
src/: image_generator.rs  lib.rs  mail_sender.rs  main.rs
