[package]
name = "text_over_image"
version = "0.1.0"
authors = ["Fabian Montero <fabian@cluster451.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
csv = "1.1.6"
image = "0.23.13"
imageproc = "0.22.0"
lettre = "0.9.5"
lettre_email = "0.9.4"
rusttype = "0.9.2"
